fix: empty color in dark mode

--- a/src/style/base.styl
+++ b/src/style/base.styl
@@ -79,6 +79,8 @@ ul
   .vue-ui-icon
     svg
       fill @color
+  .vue-ui-dark-mode &
+    color rgba($vue-ui-color-light, .5)
 
 .vue-ui-text
   &.banner
